src/test/ui/rfc-2008-non-exhaustive/uninhabited/indirect_match_same_crate.stderr
error[E0004]: non-exhaustive patterns: pattern `IndirectUninhabitedEnum` of type `IndirectUninhabitedEnum` is not handled
  --> $DIR/indirect_match_same_crate.rs:35:11
   |
LL | pub struct IndirectUninhabitedEnum(UninhabitedEnum);
   | ----------------------------------------------------
   | |          |
   | |          variant not covered
   | `IndirectUninhabitedEnum` defined here
...
LL |     match x {}
   |           ^
   |
   = help: ensure that all possible cases are being handled, possibly by adding wildcards or more match arms

error[E0004]: non-exhaustive patterns: pattern `IndirectUninhabitedStruct` of type `IndirectUninhabitedStruct` is not handled
  --> $DIR/indirect_match_same_crate.rs:39:11
   |
LL | pub struct IndirectUninhabitedStruct(UninhabitedStruct);
   | --------------------------------------------------------
   | |          |
   | |          variant not covered
   | `IndirectUninhabitedStruct` defined here
...
LL |     match x {}
   |           ^
   |
   = help: ensure that all possible cases are being handled, possibly by adding wildcards or more match arms

error[E0004]: non-exhaustive patterns: pattern `IndirectUninhabitedTupleStruct` of type `IndirectUninhabitedTupleStruct` is not handled
  --> $DIR/indirect_match_same_crate.rs:43:11
   |
LL | pub struct IndirectUninhabitedTupleStruct(UninhabitedTupleStruct);
   | ------------------------------------------------------------------
   | |          |
   | |          variant not covered
   | `IndirectUninhabitedTupleStruct` defined here
...
LL |     match x {}
   |           ^
   |
   = help: ensure that all possible cases are being handled, possibly by adding wildcards or more match arms

error[E0004]: non-exhaustive patterns: pattern `IndirectUninhabitedVariants` of type `IndirectUninhabitedVariants` is not handled
  --> $DIR/indirect_match_same_crate.rs:49:11
   |
LL | pub struct IndirectUninhabitedVariants(UninhabitedVariants);
   | ------------------------------------------------------------
   | |          |
   | |          variant not covered
   | `IndirectUninhabitedVariants` defined here
...
LL |     match x {}
   |           ^
   |
   = help: ensure that all possible cases are being handled, possibly by adding wildcards or more match arms

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0004`.
